build: move to archloom using egt
also bump gradle to 8.2.1 and kotlin to 1.9.20

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,5 @@ org.gradle.parallel=true
 org.gradle.configureoncommand=true
 org.gradle.parallel.threads=4
 org.gradle.jvmargs=-Xmx2G
+
+essential.defaults.loom=1
